# nilch

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
.github/workflows/: test-coverage.yml
backend/: cli.py  main.py
frontend/: config.js  images.html  index.html  results.html  videos.html
tests/: test_backend_cli.py  test_backend_main.py
