[project]
name = "nilch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "requests>=2.32.5",
    "uvicorn-worker>=0.4.0",
    "uvicorn[standard]>=0.40.0",
]
[project.scripts]
serve = "app.cli:main"